# ROBCUP_Tutorial

./: .gitignore
ros_workspace/.catkin_tools/profiles/default/: devel_collisions.txt
ros_workspace/.devcontainer/: Dockerfile  devcontainer.json
ros_workspace/TT2/solution/: readme.txt
ros_workspace/TT2/solution/controllers_tutorials/config/: combined_resource_controller_hsrb.yaml  combined_resource_controller_tiago.yaml  new_head_controller_tiago.yaml  new_torso_controller.yaml
ros_workspace/TT2/solution/controllers_tutorials/launch/: new_head_controller_hsrb.launch
ros_workspace/TT2/solution/ics_gazebo/config/: hsrb.rviz
ros_workspace/TT2/solution/ics_gazebo/launch/: hsrb.launch  tiago.launch
ros_workspace/TT2/solution/ics_gazebo/models/door/: model.config
ros_workspace/TT2/solution/ics_gazebo/worlds/: tutorial2.world
ros_workspace/TT2/solution/turtle_vis_hsrb/: package.xml
ros_workspace/TT2/solution/turtle_vis_hsrb/include/turtle_vis_hsrb/myClass/: TurtleClass.h
ros_workspace/TT2/solution/turtle_vis_hsrb/src/: turtle_control_node.cpp  turtle_set_position.cpp
ros_workspace/TT2/solution/turtle_vis_tiago/: package.xml
ros_workspace/TT2/solution/turtle_vis_tiago/configs/: control_param.yaml
ros_workspace/TT2/solution/turtle_vis_tiago/src/: turtle_control_node.cpp  turtle_set_position.cpp  turtle_vis_node.cpp
ros_workspace/TT2/solution/turtle_vis_tiago/src/myClass/: TurtleClass.cpp
ros_workspace/TT2_correct/solution/controllers_tutorials/: CMakeLists.txt  tutorial_controller_plugins.xml
ros_workspace/TT2_correct/solution/controllers_tutorials/config/: new_head_controller_hsrb.yaml
ros_workspace/TT2_correct/solution/controllers_tutorials/launch/: combined_resource_controller_hsrb.launch  combined_resource_controller_tiago.launch  new_head_controller_tiago.launch
ros_workspace/TT2_correct/solution/controllers_tutorials/src/: combined_resource_controller.cpp  new_head_controller.cpp  new_torso_controller.cpp
ros_workspace/TT2_correct/solution/ics_gazebo/launch/: edit_world.launch
ros_workspace/TT2_correct/solution/ics_gazebo/models/door/: door.sdf
ros_workspace/TT2_correct/solution/ics_gazebo/worlds/: tutorial1.world  tutorial4.world
ros_workspace/TT2_correct/solution/turtle_vis_hsrb/: CMakeLists.txt
ros_workspace/TT2_correct/solution/turtle_vis_hsrb/launch/: hsrb_base.launch
ros_workspace/TT2_correct/solution/turtle_vis_hsrb/src/: turtle_vis_node.cpp
ros_workspace/TT2_correct/solution/turtle_vis_hsrb/src/myClass/: TurtleClass.cpp
ros_workspace/TT2_correct/solution/turtle_vis_hsrb/srv/: send_desired_pose.srv
ros_workspace/TT2_correct/solution/turtle_vis_tiago/: CMakeLists.txt
ros_workspace/TT2_correct/solution/turtle_vis_tiago/include/turtle_vis_tiago/myClass/: TurtleClass.h
ros_workspace/TT2_correct/solution/turtle_vis_tiago/launch/: tiago_base.launch
ros_workspace/TT2_correct/solution/turtle_vis_tiago/srv/: send_desired_pose.srv
ros_workspace/src/advance_robcup/message_publisher/: CMakeLists.txt  package.xml  readme
ros_workspace/src/advance_robcup/message_publisher/scripts/: publisher_node.py
ws_local/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ws_local/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
ws_local/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
ws_local/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
ws_local/devel/lib/pkgconfig/: catkin_tools_prebuild.pc
ws_local/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
